[package]
name = "esp-now-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
futures-util = "0.3.31"
heapless = { version = "0.9.1", features = ["serde"] }
postcard = "1.1.3"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
tokio-serial = "5.4.5"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["codec"] }
sensor-message = { path = "../sensor-message" }
