[package]
name = "esp-now-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
futures-util = "0.3.31"
heapless = { version = "0.9.1", features = ["serde"] }
postcard = "1.1.3"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
tokio-serial = "5.4.5"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
sensor-message = { path = "../sensor-message" }
esp-now-protocol = { version = "0.1.0", path = "../esp-now-protocol", features = ["std"] }
rumqttc = "0.25.1"
uuid = { version = "1.19.0", features = ["v4"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
rhai = { version = "1.24.0", features = ["serde", "sync"] }
argh = "0.1.13"
